# Spectrograms

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_GUIDE.md  PYTHON_BENCHMARK.md  README.md  build_docs.py  deploy_docs.sh  katex-header.html  pyproject-fftw.toml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
benches/: fft1d_benchmarks.rs  fft2d_benchmarks.rs  image_ops_benchmarks.rs  mdct_benchmarks.rs  mdct_vs_vorbis.rs  planner_benchmarks.rs  spectrogram_benchmarks.rs  stft_benchmarks.rs
docs/: CHECKLIST.md  README.md
docs/source/: conf.py  index.rst
docs/source/api/: exceptions.rst  fft2d.rst  functions.rst  image_ops.rst  index.rst  parameters.rst  planner.rst  result.rst
docs/source/guide/: audio_features.rst  choosing_parameters.rst  examples.rst  frequency_scales.rst  image_processing.rst  installation.rst  ml_integration.rst  performance.rst  planner_guide.rst  quickstart.rst  test.py
examples/: amplitude_scales.rs  basic_linear.rs  compare_windows.rs  f32_spectrogram.rs  fft2d_basic.rs  fft_padding_demo.rs  image_blur_fft.rs  image_edge_detection.rs  mel_spectrogram.rs  readme_snippets.rs  reuse_plan.rs  serde_example.rs  stft_batch.rs  stft_multichannel.rs  stft_streaming.rs  stmtf.rs
manual/: Computational Audio and Image Analysis with the Spectrograms Library.tex  build.sh  generate_figures.py  manual.tex  python_guide.tex  references.bib
python/: README.md
python/examples/: README.md  basic_linear.py  batch_processing.py  benchmark_librosa.py  binaural.ipynb  chromagram_example.py  compare_windows.py  custom_window.py  download_audio.py  fft2d_basic.py  fft_performance_analysis.py  image_blur_fft.py  image_edge_detection.py  mdct_example.py  mel_spectrogram.py  mfcc_example.py  notebook.ipynb  numpy_impls.py  readme_snippets.py  stmtf.py  streaming.py
python/examples/ml/: pytorch_dlpack.py
python/spectrograms/: __init__.py  __init__.pyi  jax.py  torch.py
python/tests/: test_binaural_classes.py  test_custom_windows.py  test_dlpack.py  test_dtype.py  test_dtype_final.py  test_dtype_ops.py  test_dtype_planner.py  test_dtype_windows.py  test_mdct.py  test_result_classes.py  test_torch_convenience.py
src/: binaural.rs  chroma.rs  convolution.rs  cqt.rs  erb.rs  error.rs  fft2d.rs  fft_backend.rs  image_ops.rs  lib.rs  mdct.rs  mfcc.rs  min_phase.rs  sample.rs  source.rs  spectrogram.rs  window.rs
src/python/: binaural.rs  dlpack.rs  dtype.rs  error.rs  fft2d.rs  functions.rs  mdct.rs  mfcc.rs  mod.rs  params.rs  planner.rs  spectrogram.rs
tests/: builder_tests.rs  chroma_tests.rs  cqt_tests.rs  cqt_window_fix_test.rs  f32_smoke_tests.rs  fft2d_tests.rs  fft_padding_tests.rs  images_ops_tests.rs  mfcc_tests.rs  params_tests.rs  serde_tests.rs  spectrogram_tests.rs  stft_plan_tests.rs  streaming_tests.rs  window_tests.rs
